[gd_scene load_steps=4 format=3 uid="uid://ikshsj76fpwh"]

[ext_resource type="Script" path="res://GoatBlood.gd" id="1_burqr"]
[ext_resource type="Texture2D" uid="uid://di1f3vqutx7x3" path="res://Assets/sprites/GoatBlood.png" id="2_it4ml"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ipb08"]
size = Vector2(26, 18)

[node name="GoatBlood" type="Area2D"]
script = ExtResource("1_burqr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ipb08")

[node name="GoatBloodSprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_it4ml")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
